Fix contact button header alignment

--- a/css/header.css
+++ b/css/header.css
@@ -158,8 +158,8 @@
   color: #000;
   padding: 10px 24px;
   border-radius: 50px;
-  margin-left: auto;
-  margin-right: -30px;
+  margin-left: 0;
+  margin-right: 0;
   cursor: pointer;
   font-weight: 600;
   letter-spacing: 0.03em;
@@ -223,8 +223,8 @@
 }
 
 [dir="rtl"] .btn-contact {
-  margin-left: -30px;
-  margin-right: auto;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 [dir="rtl"] .nav-item {
